Project2/Coaster_customer_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-deployment
spec:
  selector:
    matchLabels:
      app: Coaster_customer
  template:
    metadata:
      labels:
        app: Coaster_customer
    spec:
      containers:
        - name: coasterc
          image: jeanaldoph/voldemort:cc
          ports:
            - containerPort: 8080
