Project2/Coaster_customer_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: Coaster_customer

spec:
  containers:
    - name: test-pod-container
      image: jeanaldoph/voldemort:cc
      ports:
        - containerPort: 8080
