Project2/Coaster_manager_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-deployment
spec:
  selector:
    matchLabels:
      app: Coaster_manager
  template:
    metadata:
      labels:
        app: Coaster_manager
    spec:
      containers:
        - name: coasterm
          image: jeanaldoph/voldemort:cm
          ports:
            - containerPort: 8080
