Project2/Coaster_customer_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c-c-service
spec:
  type: NodePort
  ports:
    - port: 80 # used by other pods
      targetPort: 8080 # port exposed on the container
      nodePort: 31515 # used to access from the outside
      protocol: TCP
  selector:
    app: Coaster_customer
