Project2/Coaster_manager_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c-m-service
spec:
  type: NodePort
  ports:
    - port: 80 # used by other pods
      targetPort: 8080 # port exposed on the container
      nodePort: 31516 # used to access from the outside
      protocol: TCP
  selector:
    app: Coaster_manager
