Project2/Coaster_redis.yaml
apiVersion: v1
<<<<<<< HEAD
kind: Service
metadata:
  name: redis-clusterip
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
=======
kind: Pod
metadata:
  name: redis
spec:
  containers:
    - name: redis
      image: redis:5.0.4
      command:
        -redis-server
        -"/redis-master/redis.conf"
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: ".01"
      volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
            items:
              - key: redis-config
                path: redis.config

>>>>>>> paityn_test
